--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column; /* Align children vertically */
     height: 100vh;
-
+    
     .appBar {
         position: sticky;
         top: 0;
@@ -14,6 +14,7 @@
     .content{
         display: flex;
         height: 100%;
+        padding: 10px;
     }
   
     .left-pane,
