--- a/src/components/AppBar/AppBar.scss
+++ b/src/components/AppBar/AppBar.scss
@@ -18,6 +18,9 @@
     font-size: 20px;
     font-weight: bold;
     margin-left: -80px;
+    box-shadow: 0px 0px 5px #fff;
+    width: 100px;
+    text-align: center;
   }
   
   .nav-items {
@@ -56,9 +59,9 @@
     color: white;
     cursor: pointer;
     margin-left: 5px;
-    margin-right: -110px;
+    margin-right: -100px;
     height: 40px;
-    width: 60px;
+    width: 40px;
     border-radius: 80px;
   }
 
