--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -22,6 +22,7 @@
       width: 20%;
       padding: 20px;
       background-color: #f0f0f0;
+      size: 255px;
     }
   
     .middle-pane {
@@ -29,5 +30,12 @@
       padding: 20px;
     }
 
+    .friend-profile-button{
+      color: white;
+      height: 25px;
+      width: 25px;
+      border-radius: 100px;
+    }
+    
   }
   
