minor css changes to dashboard and appbar

--- a/src/components/AppBar/AppBar.scss
+++ b/src/components/AppBar/AppBar.scss
@@ -17,7 +17,10 @@
     color: blue($color: #000000);
     font-size: 20px;
     font-weight: bold;
-    margin-left: -80px;
+    margin-left: -95px;
+    box-shadow: 0px 0px 5px #fff;
+    width: 100px;
+    text-align: center;
   }
   
   .nav-items {
@@ -27,27 +30,42 @@
   
   .search-form {
     display: flex;
+    margin-right: 500px;
+    color: white;
   }
   
   .search-input {
     padding: 5px;
     margin-right: 5px;
+    background-color: grey;
+    color: white;
+    width: 500px;
   }
   
   .search-button {
     padding: 5px 10px;
-    background-color: #fff;
-    color: #333;
+    background-color: grey;
+    color: white;
     border: none;
     cursor: pointer;
+    height: 40px;
+    border-radius: 10px;
   }
   
   .profile-button {
     padding: 5px 10px;
-    background-color: #fff;
-    color: #333;
+    background-color: blue;
     border: none;
+    color: white;
     cursor: pointer;
     margin-left: 5px;
+    margin-right: -100px;
+    height: 40px;
+    width: 40px;
+    border-radius: 80px;
   }
+
+  ::placeholder { 
+      color: white; 
+} 
   
