--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -21,7 +21,7 @@
     .right-pane {
       width: 20%;
       padding: 20px;
-      background-color: #f8f9fa;
+      background-color: #f0f0f0;
       size: 255px;
     }
 
