minor changes in dashboard and appbar

--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -63,5 +63,16 @@
       padding: 20px;
     }
 
+    .friend-profile-button{
+      color: white;
+      height: 25px;
+      width: 25px;
+      border-radius: 100px;
+    }
+
+    ::placeholder { 
+      color: white; 
+    } 
+
   }
   
