--- a/src/components/AppBar/AppBar.scss
+++ b/src/components/AppBar/AppBar.scss
@@ -18,6 +18,9 @@
     font-size: 20px;
     font-weight: bold;
     margin-left: -80px;
+    box-shadow: 0px 0px 5px #fff;
+    width: 100px;
+    text-align: center;
   }
   
   .nav-items {
@@ -28,14 +31,19 @@
   .search-form {
     position: relative;
     display: flex;
+    margin-right: 500px;
+    color: white;
   }
   
   .search-input {
     width: 200px;
     padding: 5px;
-    margin-right: 5px;
+    margin-left: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    background-color: grey;
+    color: white;
+    width: 500px;
   }
   
   .search-button {
@@ -50,9 +58,15 @@
     padding: 5px 10px;
     background-color: #fff;
     color: #333;
+    background-color: blue;
     border: none;
+    color: white;
     cursor: pointer;
     margin-left: 5px;
+    margin-right: -100px;
+    height: 40px;
+    width: 40px;
+    border-radius: 80px;
   }
   
   .suggestions-list {
