--- a/src/screens/Dashboard.scss
+++ b/src/screens/Dashboard.scss
@@ -45,6 +45,14 @@
           border: 1px solid #dee2e6; // Bootstrap border color
           border-radius: 4px;
           cursor: pointer;
+          .friend-name{
+            font-size: 16px; /* Adjust font size for the name */
+            font-weight: bold;
+          }
+          .friend-username{
+            font-size: 14px; /* Adjust font size for the username */
+            color: #777; /* Adjust color for the username */
+          }
         }
 
         .post-text {
