--- a/src/components/PostElement/PostElement.scss
+++ b/src/components/PostElement/PostElement.scss
@@ -23,12 +23,17 @@
     }
   
     .post-button {
-      background-color: #007bff;
-      color: #fff;
-      padding: 8px 16px;
+      background-color: #333; /* Default background color */
+      color: #fff; /* Default text color */
       border: none;
-      border-radius: 4px;
+      padding: 10px 20px;
       cursor: pointer;
+      transition: background-color 0.3s, color 0.3s;
+    }
+
+    .post-button:hover {
+      background-color: #111; /* New background color on hover */
+      color: #ffffff;
     }
   }
   
